[gd_scene load_steps=5 format=3 uid="uid://bposih2di0o34"]

[ext_resource type="Script" uid="uid://ctj735eqp81pw" path="res://Player/attack/projectiles/bullet_projectile.gd" id="1_ax1xb"]
[ext_resource type="Texture2D" uid="uid://ctkadc0rfhqvq" path="res://Textures/Items/Weapons/Bullet.png" id="2_mbe1r"]
[ext_resource type="AudioStream" uid="uid://cdncrakocho7v" path="res://Audio/SoundEffect/laser.mp3" id="3_s22s3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jb4s5"]
size = Vector2(18, 6)

[node name="BulletProjectile" type="Area2D" node_paths=PackedStringArray("collision") groups=["attack"]]
top_level = true
collision_layer = 2
collision_mask = 4
script = ExtResource("1_ax1xb")
collision = NodePath("CollisionShape2D")
base_damage = 5
base_speed = 550
base_knockback_amount = 60

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_mbe1r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jb4s5")

[node name="deathTimer" type="Timer" parent="."]
wait_time = 9.0
one_shot = true
autostart = true

[node name="sfx_shoot" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_s22s3")
volume_db = -30.0

[node name="despawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="deathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="despawnTimer" to="." method="_on_despawn_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
